# edge-tpu-v5-benchmark-suite

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .pre-commit-config.yaml  .secrets.baseline  API_REFERENCE.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.production  Dockerfile.quantum  Makefile  PERFORMANCE_ENHANCEMENTS_SUMMARY.md  PROGRESSIVE_QUALITY_GATES_IMPLEMENTATION.md  PROJECT_CHARTER.md  QUANTUM_TECHNICAL_SPECIFICATIONS.md  README.md  SECURITY.md  SECURITY_FIXES.md  TERRAGON_AUTONOMOUS_EXECUTION_REPORT.md  TERRAGON_AUTONOMOUS_IMPLEMENTATION_COMPLETE.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_V4_COMPLETION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_V4_FINAL_REPORT.md  TERRAGON_BREAKTHROUGH_IMPLEMENTATION_SUMMARY.md  TERRAGON_FINAL_IMPLEMENTATION_REPORT.md  TERRAGON_IMPLEMENTATION_GUIDE.md  TERRAGON_IMPLEMENTATION_SUMMARY.md  TERRAGON_RESEARCH_FRAMEWORK.md  autonomous_sdlc_metrics.json  autonomous_sdlc_report.txt  (+61 more)
.devcontainer/: devcontainer.json  post-create.sh  setup.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml  ci.yml  release.yml  security.yml
.terragon/: config.yaml  value-metrics.json
docs/: BUILD.md  IMPLEMENTATION_ROADMAP.md  ROADMAP.md
docs/adr/: 0001-adr-template.md  README.md  adr-0001-python-primary-language.md  adr-0002-tensorflow-lite-runtime.md  adr-0003-modular-plugin-architecture.md
docs/guides/: installation.md
docs/operational/: MONITORING.md
docs/security/: SLSA_COMPLIANCE.md  SUPPLY_CHAIN_SECURITY.md  THREAT_MODEL.md
docs/templates/: CODEOWNERS.template  bug_report.md  feature_request.md  performance_issue.md  pull_request_template.md
docs/workflows/: AUTONOMOUS_CI_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  README.md  ci.yml.template  dependabot.yml.template  docker.yml.template  release.yml.template  repo-setup.md  security.yml.template
examples/: basic_benchmark.py  quantum_planning_demo.py  quantum_research_demo.py  quantum_standalone_demo.py
k8s/: deployment.yaml  hpa.yaml  namespace.yaml  production-deployment-enhanced.yaml  production-deployment.yaml  pvc.yaml  quantum-production-deployment.yaml  service.yaml
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
research_results/: quantum_study_batch_raw_data.csv  quantum_study_batch_statistics.json
scripts/: autonomous_value_discovery.py
src/edge_tpu_v5_benchmark/: __init__.py  adaptive_optimizer.py  adaptive_quantum_error_mitigation.py  advanced_error_recovery.py  advanced_security.py  advanced_telemetry.py  auto_scaling.py  autonomous_sdlc.py  autonomous_sdlc_engine.py  benchmark.py  cache.py  cli.py  compiler.py  comprehensive_validation.py  concurrency.py  config.py  converter.py  database.py  distributed_computing.py  enhanced_validation.py  exceptions.py  global_compliance_framework.py  global_deployment.py  health.py  hyper_optimization_engine.py  hyper_performance_engine.py  logging_config.py  metrics_integration.py  models.py  monitoring.py  multi_tpu_parallel.py  performance.py  power.py  production_monitoring.py  progressive_quality_gates.py  qbang_optimization.py  quantum_auto_scaling.py  quantum_cli.py  quantum_compliance.py  quantum_computing_research.py  (+17 more)
tests/: __init__.py  conftest.py  conftest_enhanced.py  pytest.ini  test_generation_2_robustness.py  test_generation_3_optimization.py  test_performance_optimizations.py  test_utils.py  utils.py
tests/e2e/: __init__.py  test_cli_integration.py  test_cli_workflow.py
tests/fixtures/: __init__.py  sample_models.py
tests/integration/: __init__.py  test_benchmark_workflow.py  test_full_benchmark_workflow.py  test_model_conversion.py  test_quantum_system_integration.py
(+17 files in other folders)
